; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_posix-timers.c_release_posix_timer.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_posix-timers.c_release_posix_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.k_itimer = type { i32, i32, i32, i32 }

@hash_lock = common dso_local global i32 0, align 4
@k_itimer_rcu_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.k_itimer*, i32)* @release_posix_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_posix_timer(%struct.k_itimer* %0, i32 %1) #0 {
  %3 = alloca %struct.k_itimer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.k_itimer* %0, %struct.k_itimer** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @spin_lock_irqsave(i32* @hash_lock, i64 %9)
  %11 = load %struct.k_itimer*, %struct.k_itimer** %3, align 8
  %12 = getelementptr inbounds %struct.k_itimer, %struct.k_itimer* %11, i32 0, i32 3
  %13 = call i32 @hlist_del_rcu(i32* %12)
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @spin_unlock_irqrestore(i32* @hash_lock, i64 %14)
  br label %16

16:                                               ; preds = %8, %2
  %17 = load %struct.k_itimer*, %struct.k_itimer** %3, align 8
  %18 = getelementptr inbounds %struct.k_itimer, %struct.k_itimer* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @put_pid(i32 %19)
  %21 = load %struct.k_itimer*, %struct.k_itimer** %3, align 8
  %22 = getelementptr inbounds %struct.k_itimer, %struct.k_itimer* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sigqueue_free(i32 %23)
  %25 = load %struct.k_itimer*, %struct.k_itimer** %3, align 8
  %26 = getelementptr inbounds %struct.k_itimer, %struct.k_itimer* %25, i32 0, i32 0
  %27 = load i32, i32* @k_itimer_rcu_free, align 4
  %28 = call i32 @call_rcu(i32* %26, i32 %27)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hlist_del_rcu(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @put_pid(i32) #1

declare dso_local i32 @sigqueue_free(i32) #1

declare dso_local i32 @call_rcu(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
